CTrackUAT/src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Category_of_Product__c</fullName>
        <label>Category of Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Invoice__r.Airway_Shipment__r.Invoice_Dt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Qty__c</fullName>
        <label>Invoice Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>Related_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Item_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf_life__c</fullName>
        <label>Shelf life</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Franchise__c</fullName>
        <label>Sub Franchise</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>